--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -2,23 +2,26 @@ name: Sync upstream hourly
 
 on:
   schedule:
-    - cron: "0 * * * *"   # 每小时整点
-  workflow_dispatch:      # 支持手动点击运行
+    - cron: "0 * * * *"
+  workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   sync:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout fork
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Sync from upstream
+      - name: Sync from upstream (merge)
         run: |
-          git remote add upstream https://github.com/npmx-dev/npmx.dev.git
-          git fetch upstream
+          set -e
+          git remote add upstream https://github.com/npmx-dev/npmx.dev.git || true
+          git fetch --prune upstream
           git checkout main
-          git merge upstream/main --no-edit || exit 0
+          git merge upstream/main --no-edit
           git push origin main
