--- a/.github/workflows/sync-upstream.yml
+++ b/.github/workflows/sync-upstream.yml
@@ -16,6 +16,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: main
+
+      - name: Configure git identity (required for merge commits)
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Sync from upstream (merge)
         run: |
@@ -23,5 +29,5 @@ jobs:
           git remote add upstream https://github.com/npmx-dev/npmx.dev.git || true
           git fetch --prune upstream
           git checkout main
-          git merge upstream/main --no-edit
+          git merge --no-edit upstream/main
           git push origin main
